# openwebui_suite

./: .gitignore  docker-compose.yml  docker.code-workspace
ollama/: README.md  docker-compose.yml
openwebui/: README.md  docker-compose.yml
tool_server/: Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
tool_server/tools/: scrub.py
